# colored_message_app

./: .env  Cargo.toml  Shuttle.toml
assets/: index.html  main.js
crystal-colors-main/: .gitignore  Cargo.toml  color.json  diesel.toml  messages.json
crystal-colors-main/assets/: index.html  main.js  serde.md
crystal-colors-main/migrations/2024-11-15-140347_save_message/: up.sql
crystal-colors-main/migrations/2024-11-19-135331_add_unique_constraint_to_users/: down.sql  up.sql
crystal-colors-main/migrations/2024-11-26-125035_add_user_id_to_messages/: down.sql  up.sql
crystal-colors-main/migrations/2024-11-26-153034_save_message/: up.sql
crystal-colors-main/src/: database_handling.rs  lib.rs  main.rs  messages.rs  msac.rs  schema.rs  users.rs
crystal-colors-main/src/auth/: password.rs
crystal-colors-main/src/password/: mod.rs
migrations/2024-11-15-090300_create_users/: up.sql
src/: database_handling.rs  main.rs  messages.rs  users.rs
