[package]
name = "colored-message-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_ws = "0.1.1"
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.41.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bcrypt = "0.16.0"
diesel = { version = "2.2.5", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
chrono = "0.4.38"
dotenv = "0.15"
once_cell = "1.20.2"
anyhow = "1.0.93"
argon2 = "0.5.3"
