[package]
name = "crystal-colors"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
rocket_ws = "0.1.0"
shuttle-rocket = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8"
chrono = "0.4"
dotenv = "0.15"
once_cell = "1.10.0"
anyhow = "1.0"
argon2 = "0.5"

